--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   get: ^4.7.3
   flex_color_scheme: ^8.3.1
   pick_image: ^1.0.0
+  flutter_animate: ^4.5.2
+  path_provider: ^2.1.5
 
   # Google
   google_fonts: ^6.3.2
