--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   image_picker: ^1.2.1
   geolocator: ^14.0.2
   flutter_map: ^8.2.2
+  app_settings: ^7.0.0
+  vibration: ^3.1.4
+  twilio_flutter: ^0.9.0
+  flutter_dotenv: ^6.0.0
 
   # Google
   google_fonts: ^6.3.2
@@ -81,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
