--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   open_filex: ^4.7.0
   audioplayers: ^6.5.1
   share_plus: ^12.0.1
+  table_calendar: ^3.2.0
+  flutter_localization: ^0.3.3
+  google_mobile_ads: ^7.0.0
 
   # Google
   google_fonts: ^6.3.2
